tests/invalid/default_parameter_non_trailing.wio
fn Bad(x: i32 = 1, y: i32) -> i32 {
    return x + y;
}

fn Entry() -> i32 {
    return Bad(1, 2);
}
